--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/babel__core": "^7.20.0",
     "ansi-regex": "^6.0.1",
     "expo-status-bar": "^1.4.4",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.2",
