--- a/package.json
+++ b/package.json
@@ -10,25 +10,37 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/babel__core": "^7.20.0",
     "ansi-regex": "^6.0.1",
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "expo-status-bar": "^1.4.4",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-config": "^1.5.0",
+    "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.19.4"
+    "react-native-web": "^0.19.4",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.3",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,7 +54,7 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.9",
+    "metro-react-native-babel-preset": "^0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
