--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.71.7",
     "react-native-config": "^1.5.0",
     "react-native-dotenv": "^3.4.8",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.1.0",
