--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-crop-picker": "^0.39.0",
+    "react-native-image-picker": "^5.3.1",
+    "react-native-permissions": "^3.8.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
