--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-
+URL_DEPLOY="https://express-coffee-shop.vercel.app/"
+URL_LOCAL="http:192.168.0.120:3001/"
 URL_IMAGE="https://res.cloudinary.com/dqgebz3rr/image/upload/v1679725330/"
